--- a/sites/blog/package.json
+++ b/sites/blog/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint pages --fix"
   },
   "dependencies": {
     "next": "latest",
@@ -17,6 +18,8 @@
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.1",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.13.0",
+    "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
