--- a/sites/blog/tsconfig.json
+++ b/sites/blog/tsconfig.json
@@ -6,6 +6,6 @@
       "@src/*": ["src/*"]
     }
   },
-  "include": ["next-env.d.ts", "src/**/*", "styles/global.css"],
-	"exclude": ["node_modules", ".next", ".turbo"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", ".next", ".turbo"]
 }
