--- a/sites/core/tsconfig.json
+++ b/sites/core/tsconfig.json
@@ -2,10 +2,7 @@
   "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@src/*": ["src/*"]
-    }
   },
-  "include": ["next-env.d.ts", "src/**/*", "styles/global.css"],
-	"exclude": ["node_modules", ".next", ".turbo"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", ".next", ".turbo"] 
 }
