--- a/sites/blog/package.json
+++ b/sites/blog/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "cd ../../ && husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
